<resources>
    <string name="app_name">TrackFM</string>
    <string name="todo">TODO</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_usuario_solicita_uno">¿No tienes usuario? Solicita uno</string>
    <string name="aqui">Aquí</string>
    <string name="param">Ancho de Banda</string>
    <string name="param2">Potencia</string>
    <string name="parametro">Parametro</string>
    <string name="dispositivo_selecionado">Dispositivo selecionado:</string>
    <string name="nombre">Nombre</string>
    <string name="parametro_selecionado">Parametro selecionado:</string>
    <string name="valor">Valor</string>
    <string name="dispositivos_conectados">Dispositivos Conectados</string>
</resources>